fix scrollbar width for mozilla

--- a/src/assets/css/tailwind.scss
+++ b/src/assets/css/tailwind.scss
@@ -2,9 +2,7 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-html,
-body {
-  //TODO: настроить скроллбар для Mozila
+* {
   scrollbar-width: none;
   -webkit-tap-highlight-color: transparent;
 }
